--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
     --background-color: #E5E5E5;
     --nav-text-color: #2E2F42;
     --blu-color: #4D5AE5;
+    --white-fon: #ffffff;
+    --color-F4F4FD: #F4F4FD;
+    --color-E7E9FC: #E7E9FC;
+    --color-404BBF: #404BBF;
 
 }
 
@@ -13,7 +17,7 @@
 
 /* Body */
 body {
-    background-color: var(--background-color);
+    background-color: var(--white-fon);
     color: var(--p-text-color);
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
@@ -54,7 +58,7 @@ a:link {
     font-size: 18px;
     font-weight: 1.17;
     letter-spacing: 0.03em;
-    color: #F4F4FD;
+    color: var(--color-F4F4FD);
 }
 
 .logo-futer .logo-parttwo {
@@ -67,15 +71,10 @@ a:link {
 }
 
 .section {
-    background-color: #F4F4FD;
+    background-color: var(--color-F4F4FD);
 }
 
-/* header */
-.part-header {
-    background-color: #E7E9FC;
-
-}
-
+/* хедр */
 .nav {
     color: var(--nav-text-color);
     font-weight: 500;
@@ -83,23 +82,23 @@ a:link {
 
 .nav:hover,
 .nav:focus {
-    color: #404BBF;
+    color: var(--color-404BBF);
 
 }
 
 .cont {
-    color: #434455;
+    color: var(--p-text-color);
 }
 
 .cont:hover,
 .cont:focus {
-    color: #404BBF;
+    color: var(--color-404BBF);
 }
 
 
 /* Hero */
 .hero-title {
-    color: #FFFFFF;
+    color: var(--white-fon);
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
@@ -128,7 +127,7 @@ a:link {
 }
 
 .button {
-    background-color: #F4F4FD;
+    background-color: var(--color-F4F4FD);
     color: var(--blu-color);
     font-weight: 500;
     cursor: pointer;
@@ -136,15 +135,21 @@ a:link {
 
 .button:hover,
 .button:focus {
-    background-color: #E7E9FC;
+    background-color: var(--color-404BBF);
+    color: var(--white-fon);
+
 }
 
 .button.primary {
     background-color: var(--blu-color);
-    color: #FFFFFF;
+    color: var(--white-fon);
 }
 
 .button.primary:hover,
 .button.primary:focus {
-    background-color: #404BBF;
+    background-color: var(--color-404BBF);
+}
+
+.footer-text {
+    color: var(--color-E7E9FC);
 }
