--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,11 @@ a:link {
 .button {
     background-color: var(--color-F4F4FD);
     color: var(--blu-color);
+    font-family: inherit;
     font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     cursor: pointer;
 }
 
@@ -143,6 +147,11 @@ a:link {
 .button.primary {
     background-color: var(--blu-color);
     color: var(--white-fon);
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
 }
 
 .button.primary:hover,
